--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 <p>Track: <span>Frontend</span></p>
 
-                <a href="" >Link to github repository</a>
+                <a href="https://github.com/rhose1234/hngx-internship1" >Link to github repository</a>
             </div>
         </div>
     </div>
