--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="personal-data">
         <h2 data-testid="slackUserName">Akorede Rose</h2>
   
-        <img src="./assets/img/profile.jpg" alt="Marvelous" data-testid="slackDisplayImage" />
+        <img src="./assets/img/profile.jpg" width="50 alt="Marvelous" data-testid="slackDisplayImage" />
 
 
         <p data-testid="currentDayOfTheWeek" id="dayOfTheWeek"></p>
