--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <p data-testid="myTrack">Frontend Track</p>
 
-      <a href="https://github.com/rhose1234/hngx-internship1" data-testid="githubURL">Github Repository</a
+      <a href="https://github.com/rhose1234/hngx-internship1" data-testid="githubURL">Github</a
     
     </div>
 
